<?xml version="1.0"?>
<package format="2">
  <name>lidar_ros_driver</name>
  <version>1.0.0</version>
  <description>O-Net LiDAR ROS Driver</description>
  <maintainer email="lidar@o-netcom.com">Wenjie Xiao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>rosbag</build_depend>
  <build_export_depend>gtest</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>common_msgs</exec_depend>
  <exec_depend>gtest</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <test_depend>rosunit</test_depend>
</package>
